log
Thu 25 Apr 2024 03:16:17 PM UTC: 
 tests:  0|6
total_score: 0/70
1dede22
Thu 25 Apr 2024 03:27:03 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   58 |     map->buckets[i] = NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8714bfc
Thu 25 Apr 2024 03:30:23 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
5e5f30f
Thu 25 Apr 2024 04:06:04 PM UTC: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:59:43: error: ‘Pair’ has no member named ‘next’
   59 |       Pair* next_buckets = current_buckets->next;
      |                                           ^~
Compilation failed
1170fa8
Thu 25 Apr 2024 04:07:21 PM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:60:7: error: ‘current_buckets’ undeclared (first use in this function); did you mean ‘next_buckets’?
   60 |       current_buckets = next_buckets;
      |       ^~~~~~~~~~~~~~~
      |       next_buckets
hashmap.c:60:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8a2baa8
Thu 25 Apr 2024 04:08:17 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
5671cd5
Thu 25 Apr 2024 04:11:35 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insert’:
hashmap.c:44:27: error: implicit declaration of function ‘hash_function’ [-Werror=implicit-function-declaration]
   44 |     unsigned long index = hash_function(key) % map->capacity;
      |                           ^~~~~~~~~~~~~
hashmap.c:47:23: error: implicit declaration of function ‘create_pair’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
   47 |     Pair * new_pair = create_pair(key, value);
      |                       ^~~~~~~~~~~
      |                       createPair
hashmap.c:47:23: error: initialization of ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
hashmap.c:55:23: error: ‘Pair’ has no member named ‘next’
   55 |         while (current->next != NULL) {
      |                       ^~
hashmap.c:56:30: error: ‘Pair’ has no member named ‘next’
   56 |             current = current->next;
      |                              ^~
hashmap.c:58:16: error: ‘Pair’ has no member named ‘next’
   58 |         current->next = new_pair;
      |                ^~
cc1: all warnings being treated as errors
Compilation failed
2ddf77d
Sat 27 Apr 2024 04:27:47 PM UTC: 
 hashmap.c | 22 ++--------------------
 1 file changed, 2 insertions(+), 20 deletions(-)
 tests:  0|0
5f7c408
Sat 27 Apr 2024 04:28:55 PM UTC: 
 hashmap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:59:30: error: ‘Pair’ has no member named ‘next’
   59 |             current = current->next;
      |                              ^~
Compilation failed
09894a9
Sat 27 Apr 2024 04:29:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a810b30
Sat 27 Apr 2024 04:32:11 PM UTC: 
 hashmap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  0|0
8139089
Sat 27 Apr 2024 04:57:19 PM UTC: 
 hashmap.c | 131 ++++++++++++++++++++++++++++++++++++++++++++++----------------
 1 file changed, 98 insertions(+), 33 deletions(-)
 tests:  17|0
total_score: 70/70
2d6eed7
